<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/register_phone_bg"
        android:hint="@string/et_password_hint"
        android:inputType="textPassword"
        android:padding="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/tv_tips_password"
        android:textColor="@color/gray_font"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/password_again"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/register_phone_bg"
        android:hint="确认密码"
        android:inputType="textPassword"
        android:padding="5dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/register_phone_bg"
        android:hint="@string/et_name_hint"
        android:inputType="text"
        android:padding="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/tv_tips_name"
        android:textColor="@color/gray_font"
        android:textSize="14dp" />

    <Button
        android:id="@+id/register_complete"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/register_complete"
        android:textColor="@color/whites" />

</LinearLayout>