<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_phone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/register_phone_bg"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/tv_country"
            android:textColor="@color/green_stroke"
            android:textSize="16dp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/devide_line" />

        <EditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_margin="2dp"
            android:background="@android:color/white"
            android:hint="@string/et_phoneNumber_hint"
            android:inputType="phone"
            android:padding="5dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/btn_next"
        android:textColor="@android:color/white"  />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/ck_agreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tv_xieyi"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/tv_xieyi_url"
            android:textColor="@color/green_stroke"
            android:textSize="14dp" />
    </LinearLayout>

</LinearLayout>